--- a/locales/en.json
+++ b/locales/en.json
@@ -1,8 +1,8 @@
 {
-  "unlocked_door": "Unlocked door",
-  "locked_door": "Locked door",
-  "lock_door": "[E] Lock door",
-  "unlock_door": "[E] Unlock door",
+  "unlocked_door": "Đã mở khoá cửa",
+  "locked_door": "Đã khoá cửa",
+  "lock_door": "[E] Khoá cửa",
+  "unlock_door": "[E] Mở khoá cửa",
   "door_lock": "Door lock",
   "passcode": "Passcode",
   "lockpick_broke": "Your lockpick broke",
@@ -10,8 +10,8 @@
   "add_lock": "Add doorlock",
   "edit_lock": "Edit doorlock",
   "remove_lock": "Remove doorlock",
-  "cannot_unlock": "Unable to unlock door",
-  "cannot_lock": "Unable to lock door",
+  "cannot_unlock": "Bạn không có quyền mở khoá",
+  "cannot_lock": "Bạn không có quyền khoá cửa",
   "create_modify_lock": "Create a doorlock, or modify an existing one",
   "add_door_textui": "**Create new door**  \nInteract with [LMB]  \nCancel with [RMB]",
   "command_closest": "Open UI directly to closest doorlock"
